adds basic tweak browser

--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -538,6 +538,10 @@
                                 x:Name="ImportExportCheckbox"
                                 Header="Import / Export"
                                 IsCheckable="True" />
+                            <MenuItem
+                                x:Name="TweakBrowserCheckbox"
+                                Header="Tweak Browser"
+                                IsCheckable="True" />
                             <Separator Margin="0,5,0,3" Background="{StaticResource BorderAlt}" />
                             <MenuItem
                                 Command="{Binding ShowPluginToolCommand}"
