--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -2,12 +2,12 @@
     x:Class="WolvenKit.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:documents="clr-namespace:WolvenKit.Views.Documents"
+    xmlns:docvm="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
-    xmlns:toolvm="clr-namespace:WolvenKit.ViewModels.Tools;assembly=WolvenKit.App"
-    xmlns:docvm="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App"
     xmlns:tools="clr-namespace:WolvenKit.Views.Tools"
-    xmlns:documents="clr-namespace:WolvenKit.Views.Documents">
+    xmlns:toolvm="clr-namespace:WolvenKit.ViewModels.Tools;assembly=WolvenKit.App">
 
     <Application.Resources>
         <ResourceDictionary>
@@ -41,6 +41,12 @@
                         </Grid>
                     </DataTemplate>
 
+                    <DataTemplate DataType="{x:Type toolvm:TweakBrowserViewModel}">
+                        <Grid>
+                            <tools:TweakBrowserView />
+                        </Grid>
+                    </DataTemplate>
+
 
                     <DataTemplate DataType="{x:Type docvm:RedDocumentViewModel}">
                         <Grid>
@@ -69,7 +75,7 @@
                             <views1:VisualEditorView />
                         </Grid>
                     </DataTemplate>-->
-                    
+
                 </ResourceDictionary>
 
                 <!--  Global Styles  -->
@@ -99,8 +105,8 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
 
-                <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Dark.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Dark.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml" />
 
                 <!--  Theme setting  -->
                 <hc:ThemeResources RequestedTheme="Dark" />
