Add Launch Game button to main toolbar.
Try to launch the game using the executable path stored in settings.

--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -123,7 +123,8 @@
             IsLocked="True"
             >
                 <ToolBarTray.Style>
-                    <Style TargetType="ToolBarTray" BasedOn="{StaticResource ToolBarTrayBaseStyle}">
+                    <Style TargetType="ToolBarTray">
+                        <Setter Property="Background" Value="Transparent" />
                         <Setter Property="Visibility" Value="Collapsed" />
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsChecked, ElementName=ribbonEnabled}" Value="False">
@@ -402,6 +403,18 @@
                                 Kind="ArrowRight" />
                             </Grid>
                             <TextBlock Text="Pack &amp; Install" Padding="5,0,0,0" />
+                        </StackPanel>
+                    </Button>
+                    <Separator Margin="6" />
+                    <Button x:Name="ToolbarLaunchGameButton" Command="{Binding LaunchGameCommand}" ToolTip="Launch Game - Did You Remember To Pack &amp; Install?">
+                        <StackPanel Orientation="Horizontal">
+                            <Grid>
+                                <iconPacks:PackIconCodicons Style="{StaticResource WolvenKitToolBarButtonIcon}"
+                                Foreground="{StaticResource WolvenKitYellow}"
+                                Padding="0,0,2,2"
+                                Kind="RunAll" />
+                            </Grid>
+                            <TextBlock Text="Launch Game" Padding="5,0,0,0" />
                         </StackPanel>
                     </Button>
                     <Separator Margin="3" />
