--- a/WolvenKit/Views/Tools/RedTreeView.xaml
+++ b/WolvenKit/Views/Tools/RedTreeView.xaml
@@ -25,6 +25,9 @@
                         <Setter Property="Foreground" Value="{StaticResource BorderAlt2}" />
                         <Setter Property="FontStyle" Value="Italic" />
                     </DataTrigger>
+                    <DataTrigger Binding="{Binding IsReadOnly}" Value="True">
+                        <Setter Property="Foreground" Value="{StaticResource WolvenKitTan50}" />
+                    </DataTrigger>
                 </Style.Triggers>
             </Style>
 
@@ -41,6 +44,9 @@
                                     <Setter Property="Foreground" Value="{StaticResource BorderAlt2}" />
                                     <Setter Property="FontStyle" Value="Italic" />
                                 </DataTrigger>
+                                <DataTrigger Binding="{Binding IsReadOnly}" Value="True">
+                                    <Setter Property="Foreground" Value="{StaticResource WolvenKitTan50}" />
+                                </DataTrigger>
                             </Style.Triggers>
                         </Style>
                         <Style TargetType="TextBlock">
@@ -48,6 +54,9 @@
                                 <DataTrigger Binding="{Binding IsDefault}" Value="True">
                                     <Setter Property="Foreground" Value="{StaticResource BorderAlt2}" />
                                     <Setter Property="FontStyle" Value="Italic" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding IsReadOnly}" Value="True">
+                                    <Setter Property="Foreground" Value="{StaticResource WolvenKitTan50}" />
                                 </DataTrigger>
                             </Style.Triggers>
                         </Style>
@@ -60,14 +69,14 @@
                         Grid.Column="1"
                         Width="Auto"
                         Margin="0,0,0,2"
-                        Text="{Binding Name, Mode=OneTime}" />
+                        Text="{Binding Name}" />
                     <TextBlock
                         Grid.Column="2"
                         Width="Auto"
                         Margin="0,0,0,2"
                         Foreground="{StaticResource Border}"
                         Style="{StaticResource ExpanderHider}"
-                        Text="{Binding Type, StringFormat=' {0}', Mode=OneTime}" />
+                        Text="{Binding Type, StringFormat=' {0}'}" />
                 </Grid>
             </DataTemplate>
 
@@ -76,7 +85,7 @@
                     <TextBlock
                         Width="Auto"
                         Margin="0,0,0,2"
-                        Text="{Binding Name, Mode=OneTime}" />
+                        Text="{Binding Name}" />
                 </Grid>
             </DataTemplate>
 
@@ -110,7 +119,7 @@
                         Margin="0,0,6,0"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
-                        Kind="{Binding Extension, Mode=OneTime}" />
+                        Kind="{Binding Extension}" />
                     <StackPanel
                         Grid.Column="1"
                         Margin="0,0,4,0"
@@ -128,7 +137,7 @@
                         <TextBlock
                             Name="PropertyType"
                             Foreground="{StaticResource WolvenKitTan}"
-                            Text="{Binding Type, Mode=OneTime}" />
+                            Text="{Binding Type}" />
                         <StackPanel Orientation="Horizontal">
                             <StackPanel.Style>
                                 <Style TargetType="StackPanel">
@@ -166,40 +175,40 @@
             <Style x:Key="ArrayNameColumnWidth" TargetType="ColumnDefinition">
                 <Setter Property="Width" Value="218" />
                 <Style.Triggers>
-                    <DataTrigger Binding="{Binding Level, Mode=OneTime}" Value="1">
+                    <DataTrigger Binding="{Binding Level}" Value="1">
                         <Setter Property="Width" Value="200" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding Level, Mode=OneTime}" Value="2">
+                    <DataTrigger Binding="{Binding Level}" Value="2">
                         <Setter Property="Width" Value="180" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding Level, Mode=OneTime}" Value="3">
+                    <DataTrigger Binding="{Binding Level}" Value="3">
                         <Setter Property="Width" Value="160" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding Level, Mode=OneTime}" Value="4">
+                    <DataTrigger Binding="{Binding Level}" Value="4">
                         <Setter Property="Width" Value="140" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding Level, Mode=OneTime}" Value="5">
+                    <DataTrigger Binding="{Binding Level}" Value="5">
                         <Setter Property="Width" Value="120" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding Level, Mode=OneTime}" Value="6">
+                    <DataTrigger Binding="{Binding Level}" Value="6">
                         <Setter Property="Width" Value="100" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding Level, Mode=OneTime}" Value="7">
+                    <DataTrigger Binding="{Binding Level}" Value="7">
                         <Setter Property="Width" Value="100" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding Level, Mode=OneTime}" Value="8">
+                    <DataTrigger Binding="{Binding Level}" Value="8">
                         <Setter Property="Width" Value="100" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding Level, Mode=OneTime}" Value="9">
+                    <DataTrigger Binding="{Binding Level}" Value="9">
                         <Setter Property="Width" Value="100" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding Level, Mode=OneTime}" Value="10">
+                    <DataTrigger Binding="{Binding Level}" Value="10">
                         <Setter Property="Width" Value="100" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding IsInArray, Mode=OneTime}" Value="True">
+                    <DataTrigger Binding="{Binding IsInArray}" Value="True">
                         <Setter Property="Width" Value="{Binding ArrayIndexWidth}" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding Name, Mode=OneTime}" Value="{x:Null}">
+                    <DataTrigger Binding="{Binding Name}" Value="{x:Null}">
                         <Setter Property="Width" Value="0" />
                     </DataTrigger>
                 </Style.Triggers>
@@ -298,7 +307,7 @@
                             Background="Transparent"
                             ContextMenu="{StaticResource TreeViewContextMenu}"
                             Tag="{Binding}"
-                            ToolTip="{Binding Type, Mode=OneTime}">
+                            ToolTip="{Binding Type}">
                             <Grid.CommandBindings>
                                 <CommandBinding
                                     CanExecute="Copy_CanExecute"
@@ -331,7 +340,7 @@
                             Background="Transparent"
                             ContextMenu="{StaticResource TreeViewContextMenu}"
                             Tag="{Binding}"
-                            ToolTip="{Binding Type, Mode=OneTime}">
+                            ToolTip="{Binding Type}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Style="{StaticResource ArrayNameColumnWidth}" />
                                 <ColumnDefinition Width="Auto" />
@@ -358,7 +367,7 @@
                             Background="Transparent"
                             ContextMenu="{StaticResource TreeViewContextMenu}"
                             Tag="{Binding}"
-                            ToolTip="{Binding Type, Mode=OneTime}">
+                            ToolTip="{Binding Type}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Style="{StaticResource ArrayNameColumnWidth}" />
                                 <ColumnDefinition Width="Auto" />
@@ -386,7 +395,7 @@
                             Background="Transparent"
                             ContextMenu="{StaticResource TreeViewContextMenu}"
                             Tag="{Binding}"
-                            ToolTip="{Binding Type, Mode=OneTime}">
+                            ToolTip="{Binding Type}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Style="{StaticResource ArrayNameColumnWidth}" />
                                 <ColumnDefinition Width="Auto" />
